@startuml
skinparam classAttributeIconSize 0

class Database {
  - db : sqlite3*
  + open(path : string) : DbError
  + close() : void
  + prepare(sql : string) : Statement
}

class Statement {
  - stmt : sqlite3_stmt*
  + bindInt(index : int, value : int) : DbError
  + step() : DbError
  + reset() : void
}

enum DbError {
  OK
  OpenFailed
  PrepareFailed
  BindFailed
  StepFailed
  Unknown
}

Database --> Statement : creates
Database --> DbError
Statement --> DbError
@enduml
